--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hackathonApp</title>
+
+    <link rel="stylesheet" href="/static/bootstrap-reboot.css">
+    <link rel="stylesheet" href="/static/styles.css">
+
+    <title>FlashMash</title>
+
 </head>
 <body>
-    <h1>Hello World!</h1>
+
+    <header>
+        <h1>FlashMash</h1>
+    </header>
+    <div id="flashHeader">
+    {% if get_flashed_messages() %}
+            <div>
+                <h3>{{ get_flashed_messages() | join(" ") }}</h3>
+            </div>
+    {% endif %}
+    </div>
+
+    <main>
+        {% block main %}{% endblock %}
+    </main>
+
+    <footer>
+        <h3>Built by Justin Farrow | </h3>
+        <a href="https://github.com/JAFarrow/hackathonApp"  target="_blank">Source Code</a>
+    </footer>
+
 </body>
 </html>
