--- a/static/styles.css
+++ b/static/styles.css
@@ -52,13 +52,22 @@ main {
     background-color: var(--mainbg);
 }
 
+#heading {
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #introContainer {
-    margin: 2rem 0 2rem 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
+    justify-items: center;
+    align-items: center;
     gap: 1rem;
-    height: 50%;
+    height: 65%;
 }
 
 .intro {
@@ -66,8 +75,9 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 4rem;
-    padding: 2rem;
+    max-width: 80%;
+    height: 60%;
+    padding: 1rem;
     background-color: var(--darkhigh);
     color: var(--textlightbg);
     border-radius: 20px;
@@ -81,6 +91,36 @@ main {
     font-size: 1.2rem;
 }
 
+#modalClickableContainer {
+    height: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+#modalBtn {
+    margin-top: 2rem;
+    width: 12rem;
+    height: 6rem;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--lighthigh);
+    box-shadow: .3rem .3rem .5rem #535d63;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: var(--textdarkbg);
+}
+
+#modalBtn:hover {
+    background-color: var(--textdarkbg);
+    color: var(--lighthigh);
+    border: .2rem solid var(--lighthigh);
+}
+
+#modalBtn:focus {
+    outline: none;
+}
+
 #cardInfo {
     display: flex;
     flex-direction: column;
@@ -91,6 +131,80 @@ main {
     margin: 1rem;
 }
 
+#deckContainer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(auto-fill, 1fr);
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+}
+
+.flipCard {
+    background-color: transparent;
+    width: 75%;
+    max-width: 400px;
+    height: 60%;
+    max-height: 300px;
+    border: none;
+    perspective: 1000px;
+    border-radius: 20px;
+  }
+
+  #placeholder {
+    border: .5rem dashed var(--textlightbg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #placeholder:hover {
+    background-color: var(--darkhigh);
+  }
+
+  .flipCardInner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    border-radius: 20px;
+  }
+
+  .flipCard:hover .flipCardInner {
+    transform: rotateY(180deg);
+  }
+
+  .flipCardFront, .flipCardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    border-radius: 20px;
+  }
+
+  .flipCardFront {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--darkhigh);
+    color: var(--textdarkbg);
+  }
+
+  .flipCardBack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--lighthigh);
+    color: var(--textlightbg);
+    transform: rotateY(180deg);
+  }
 
 footer {
     width: 100vw;
