--- a/static/styles.css
+++ b/static/styles.css
@@ -1,16 +1,39 @@
 :root {
-    --headnfoot: #B45342;
-    --headnfootshadow: #7e3123;
-    --textdarkbg: #F2E7DA;
-    --textlightbg: #221636;
-    --mainbg: #F2E7DA;
-    --lighthigh: #859EAC;
-    --darkhigh: #ECBB5D;
+    --headnfoot: #D39C47;
+    --headnfootshadow: #9b7338be;
+    --textdarkbg: #F1F1F0;
+    --textlightbg: #282E33;
+    --mainbg: #F1F1F0;
+    --lighthigh: #807F96;
+    --darkhigh: #AF3F55;
 }
+
 
 html {
     font-size: 10px;
 }
+
+h1, h2, h3, h4, h5, p, a {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 2.6rem;
+}
+
+h3 {
+    font-size: 2.2rem;
+}
+
+p {
+    font-size: 1.6rem;
+}
+
+
 
 body {
     width: 100vw;
@@ -25,7 +48,7 @@ header {
     align-items: center;
     background-color: var(--headnfoot);
     color: var(--textlightbg);
-    box-shadow: 0px .2vh 4px var(--headnfootshadow);
+    box-shadow: 0px .2rem 4px var(--headnfootshadow);
     z-index: 100;
 }
 
@@ -33,19 +56,9 @@ header h1 {
     font-weight: bolder;
 }
 
-#flashHeader {
-    width: 100%;
-    height: 4vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--mainbg);
-    margin-top: .5vh;
-}
-
 main {
     width: 100vw;
-    height: 80vh;
+    height: 84.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,11 +66,17 @@ main {
 }
 
 #heading {
-    height: 10%;
+    margin-top: .2rem;
+    height: 15%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#heading h2 {
+    margin-bottom: 1.5rem;
 }
 
 #introContainer {
@@ -79,20 +98,23 @@ main {
     height: 60%;
     padding: 1rem;
     background-color: var(--darkhigh);
-    color: var(--textlightbg);
+    color: var(--textdarkbg);
     border-radius: 20px;
-    box-shadow: .4rem .4rem 4px #e0a331;
+    box-shadow: .4rem .4rem 4px #551e29;
+}
+
+.intro h3 {
+    text-decoration: underline;
 }
 
 .intro p {
     width: 60%;
     margin: 1rem 0 1rem 0;
     text-align: center;
-    font-size: 1.2rem;
 }
 
 #modalClickableContainer {
-    height: 25%;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: start;
@@ -105,7 +127,7 @@ main {
     border: none;
     border-radius: 12px;
     background-color: var(--lighthigh);
-    box-shadow: .3rem .3rem .5rem #535d63;
+    box-shadow: .3rem .3rem .5rem rgb(57, 64, 68);
     font-size: 1.5rem;
     font-weight: bolder;
     color: var(--textdarkbg);
@@ -212,7 +234,15 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--headnfoot);
+    background-color: var(--mainbg);
     color: var(--textlightbg);
-    box-shadow: 0px -.2vh 4px var(--headnfootshadow);
+}
+
+#githubLink {
+    font-size: 2.2rem;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: .5rem;
+    color: var(--headnfoot);
+    margin-left: .5rem;
 }
