clear deck, final touches, mobile responsiveness

--- a/templates/cardCreation.html
+++ b/templates/cardCreation.html
@@ -3,7 +3,7 @@
 {% block main %}
     <div id="heading">
         <h2>Welcome to FlashMash!</h2>
-        <p>FlashMash is a simple solution to creating flashcards for studying without the papercuts.</p>
+        <h5>FlashMash is a simple solution to creating flashcards for studying without the papercuts.</h5>
     </div>
     <article id="introContainer">
         <div class="intro">
