--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
                 <a href="/deck" type="button">My Deck</a>
             {% elif nav == "home" %}
                 <a href="/" type="button">Home</a>
+                <a href="/clear" type="button">Clear Deck</a>
             {% endif %}
         </nav>
     </header>
