--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --headnfoot: #D39C47;
-    --headnfootshadow: #9b7338be;
+    --headnfoot: #A79BAD;
+    --headnfootshadow: #867d8a;
     --textdarkbg: #F1F1F0;
     --textlightbg: #282E33;
     --mainbg: #F1F1F0;
@@ -18,22 +18,28 @@ h1, h2, h3, h4, h5, p, a {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 3.4rem;
 }
 
 h2 {
-    font-size: 2.6rem;
+    font-size: 2.8rem;
 }
 
 h3 {
+    font-size: 2.6rem;
+}
+
+h4 {
+    font-size: 2.4rem;
+}
+
+h5 {
     font-size: 2.2rem;
 }
 
 p {
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
-
-
 
 body {
     width: 100vw;
@@ -43,9 +49,11 @@ body {
 header {
     width: 100vw;
     height: 7.5vh;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
+    justify-items: flex-end;
     background-color: var(--headnfoot);
     color: var(--textlightbg);
     box-shadow: 0px .2rem 4px var(--headnfootshadow);
@@ -54,6 +62,38 @@ header {
 
 header h1 {
     font-weight: bolder;
+    grid-column: 2;
+    justify-self: center;
+}
+
+nav {
+    grid-column: 3;
+    margin-right: 6rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+nav a {
+    height: 5rem;
+    width: 12rem;
+    text-align: center;
+    padding-top: .7rem;
+    margin-left: 2rem;
+    color: var(--textlightbg);
+    font-size: 1.8rem;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 12px;
+    border: .3rem solid var(--textlightbg);
+}
+
+nav a:hover {
+    width: 11.8rem;
+    height: 4.8rem;
+    background-color: var(--headnfootshadow);
 }
 
 main {
@@ -76,6 +116,7 @@ main {
 }
 
 #heading h2 {
+    font-weight: bold;
     margin-bottom: 1.5rem;
 }
 
@@ -89,13 +130,20 @@ main {
     height: 65%;
 }
 
+@media (width <= 500px) {
+    #introContainer {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
+
 .intro {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 80%;
-    height: 60%;
+    height: 65%;
     padding: 1rem;
     background-color: var(--darkhigh);
     color: var(--textdarkbg);
@@ -137,16 +185,60 @@ main {
     background-color: var(--textdarkbg);
     color: var(--lighthigh);
     border: .2rem solid var(--lighthigh);
+    width: 11.8rem;
+    height: 5.8rem;
 }
 
 #modalBtn:focus {
     outline: none;
 }
 
+#modal {
+    width: 35%;
+    height: 35%;
+    border: none;
+    border-radius: 18px;
+    background-color: var(--lighthigh);
+    border: .4rem solid var(--textlightbg);
+}
+
+#modal input {
+    width: 35%;
+    height: 3.5rem;
+    border-radius: 12px;
+    padding: .5rem;
+}
+
+#modal input:focus {
+    outline: none;
+}
+
+#modal button {
+    width: 9rem;
+    height: 4rem;
+    border-radius: 12px;
+    font-size: 1.6rem;
+    border: .1rem solid black;
+    font-weight: 500;
+    box-shadow: .1rem .1rem .3rem black;
+}
+
+#modal button:hover {
+    font-weight: 300;
+    box-shadow: .02rem .02rem .15rem black;
+}
+
+#modal button:focus {
+    outline: none;
+}
+
 #cardInfo {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: var(--lighthigh);
+    justify-content: center;
+    align-items: center;
 }
 
 #cardInfo * {
@@ -160,13 +252,13 @@ main {
     justify-items: center;
     align-items: center;
     width: 100%;
-    height: 90%;
+    height: 100%;
 }
 
 .flipCard {
     background-color: transparent;
-    width: 75%;
-    max-width: 400px;
+    width: 90%;
+    max-width: 500px;
     height: 60%;
     max-height: 300px;
     border: none;
@@ -183,7 +275,9 @@ main {
   }
 
   #placeholder:hover {
+    border: .5rem solid var(--textlightbg);
     background-color: var(--darkhigh);
+    color: var(--mainbg);
   }
 
   .flipCardInner {
@@ -204,6 +298,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
+    padding: 2rem;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
     border-radius: 20px;
@@ -243,6 +338,59 @@ footer {
     text-decoration: none;
     font-weight: bold;
     margin-bottom: .5rem;
-    color: var(--headnfoot);
+    color: var(--darkhigh);
     margin-left: .5rem;
+}
+
+@media screen and (width <= 500px) {
+    html {
+        font-size: 5px;
+    }
+
+    #heading {
+        margin-top: 2rem;
+    }
+
+    main {
+        height: minmax(fit-content, 100vh);
+    }
+
+    #introContainer {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-top: 2rem;
+        row-gap: 2rem;
+    }
+
+    .intro {
+        height: fit-content;
+    }
+
+    .intro h3 {
+        font-size: 1.8rem;
+    }
+
+    .intro p {
+        font-size: 1.4rem;
+    }
+
+    #modalClickableContainer {
+        height: 20%;
+        align-items: center;
+    }
+
+    #deckContainer {
+        grid-template-columns: 1fr;
+    }
+
+    #modal {
+        width: 80%;
+        height: 30%;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    html {
+        font-size: 7px;
+    }
 }
